# literary-structure-generator

./: .env.example  .gitignore  CONTRIBUTING.md  COPILOT_CONTEXT.md  DECISION_LOGGING.md  IMPLEMENTATION_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE7_SUMMARY.md  PR_56_57_COMPLETION_REPORT.md  README.md  ROADMAP.md  SECURITY.md  agentic_short_story_system_instruct_v_0.md  healthcheck.py  instructions_on_graph_entities.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_healthcheck.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
data/: Emergency.txt
docs/: CONFIG.md  PHASE4_GUIDE.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_PIPELINE.md  PROJECT_EVOLUTION.md  architecture.md  copilot_suggestions.md
examples/: README.md  author_profile_v1.json  demo_decision_logging.py  demo_digest_pipeline.py  demo_draft_generation.py  demo_evaluation.py  demo_generate_candidates.py  demo_optimization.py  generation_config_default.json
literary_structure_generator/: __init__.py
literary_structure_generator/digest/: __init__.py  assemble.py  beat_labeler.py  coherence.py  discourse.py  entity_extractor.py  motif_extractor.py  pacing.py  stylometry.py  valence_extractor.py  voice_analyzer.py
literary_structure_generator/evaluation/: __init__.py  assemble.py  subjective.py
literary_structure_generator/evaluators/: __init__.py  cadence_pacing.py  coherence_graph_fit.py  evaluate.py  formfit.py  motif_imagery_coverage.py  overlap_guard_eval.py  stylefit_llm.py  stylefit_rules.py
literary_structure_generator/generation/: __init__.py  beat_drafter.py  constraints.py  draft_generator.py  ensemble.py  guards.py  repair.py
literary_structure_generator/ingest/: __init__.py  digest_exemplar.py
literary_structure_generator/llm/: __init__.py  adapters.py  base.py  cache.py  router.py
literary_structure_generator/models/: __init__.py  author_profile.py  eval_report.py  exemplar_digest.py  generation_config.py  reason_log.py  story_spec.py
literary_structure_generator/optimization/: __init__.py  optimizer.py
literary_structure_generator/orchestrators/: __init__.py  full_pipeline.py
literary_structure_generator/pipeline/: __init__.py  generate_candidates.py
prompts/: beat_generate.v1.md  beat_paraphrase.v1.md  imagery_naming.v1.md  motif_labeling.v1.md  repair_pass.v1.md  stylefit_eval.v1.md
scripts/: demo_digest.py  demo_spec_synthesis.py
tests/: test_digest_exemplar.py  test_enrichments.py  test_llm_integration.py  test_models.py  test_phase4_generation.py  test_phase5_evaluation.py  test_phase6_pipeline.py  test_phase7_optimizer.py  test_profanity_filter.py  test_reason_log.py  test_routing_config.py  test_spec_synthesis.py  test_workflow_logging.py
(+21 files in other folders)
